# core/schemas/providers/openai/models.go
@@ -1,0 +1,54 @@
+package openai
+
+import "github.com/maximhq/bifrost/core/schemas"
+
+func (response *OpenAIListModelsResponse) ToBifrostListModelsResponse(providerKey schemas.ModelProvider) *schemas.BifrostListModelsResponse {
+	if response == nil {
+		return nil
+	}
+
+	bifrostResponse := &schemas.BifrostListModelsResponse{
+		Data: make([]schemas.Model, 0, len(response.Data)),
+	}
+
+	for _, model := range response.Data {
+		bifrostResponse.Data = append(bifrostResponse.Data, schemas.Model{
+			ID:            string(providerKey) + "/" + model.ID,
+			Created:       schemas.Ptr(model.Created),
+			OwnedBy:       schemas.Ptr(model.OwnedBy),
+			ContextLength: model.ContextWindow,
+		})
+
+	}
+
+	return bifrostResponse
+}
+
+func ToOpenAIListModelsResponse(response *schemas.BifrostListModelsResponse) *OpenAIListModelsResponse {
+
+	if response == nil {
+		return nil
+	}
+
+	openaiResponse := &OpenAIListModelsResponse{
+		Data: make([]OpenAIModel, 0, len(response.Data)),
+	}
+
+	for _, model := range response.Data {
+		openaiModel := OpenAIModel{
+			ID:     model.ID,
+			Object: "model",
+		}
+		if model.Created != nil {
+			openaiModel.Created = *model.Created
+		}
+		if model.OwnedBy != nil {
+			openaiModel.OwnedBy = *model.OwnedBy
+		}
+
+		openaiResponse.Data = append(openaiResponse.Data, openaiModel)
+
+	}
+
+	return openaiResponse
+}
